# courriel

./: .env.example  .gitignore  CLAUDE.md  README.md  hello.py  pyproject.toml
courriel/: __init__.py
courriel/auth/: __init__.py  gmail.py  ms365.py
courriel/cli/: __init__.py  main.py
courriel/cli/commands/: __init__.py  config.py  draft.py  list.py  read.py  search.py  sync.py
courriel/config/: __init__.py  paths.py  schema.py  template.py
courriel/draft/: __init__.py
courriel/read/: __init__.py  models.py
courriel/search/: __init__.py  local.py  models.py
courriel/storage/: __init__.py  maildir.py
courriel/sync/: __init__.py  engine.py  gmail.py  state.py
docs/: cli-interface.md
docs/PRD/: config-and-auth.md  gmail-auth.md  prd-search.md  prd-sync.md
docs/implementation/: sync-command.md
tests/: test_cli_sync.py  test_gmail_client.py  test_incremental_sync.py  test_maildir.py  test_read.py  test_sync_engine.py
