[project]
name = "courriel"
version = "0.1.0"
description = "Personal email CLI tool for Microsoft365 and Gmail"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "msal>=1.34.0",
    "requests>=2.32.5",
    "tomli-w>=1.2.0",
    "typer>=0.20.0",
]

[project.scripts]
courriel = "courriel.cli.main:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
