[project]
name = "courriel"
version = "0.1.0"
description = "Personal email CLI tool for Microsoft365 and Gmail"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.187.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.3",
    "msal>=1.34.0",
    "requests>=2.32.5",
    "tomli-w>=1.2.0",
    "typer>=0.20.0",
]

[project.scripts]
courriel = "courriel.cli.main:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
